...
      <TextInput
        style={styles.input}
        onChangeText={setTitle}
        value={title}
        placeholder="Title"
        placeholderTextColor="grey"
        testID="TitleIN"
      />
      <TextInput
        style={styles.input}
        onChangeText={setDesc}
        value={desc}
        placeholder="Description"
        placeholderTextColor="grey"
        testID="DescIN"
      />

      {/* Clickable date field that opens date selector */}
      <Pressable onPress={() => setOpenPicker(true)}>
        <Text style={[styles.input, styles.centered]}>
          {selectedTimestamp.toDateString()} - {selectedTimestamp.getHours()}:
...
