...
// and create an event in the system calendar and share an ICAL file
function SaveButton(props: ItemProps) {
  return (
    <Button
      title="Save"
      color="#841584"
      testID="SaveButton"
      accessibilityLabel="Save new party"
      onPress={async () => {
        const party: Party = {
          title: props.title,
          desc: props.desc,
          attendants: props.invites.length,
...
